--- a/services.html
+++ b/services.html
@@ -15,7 +15,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <link rel="stylesheet" href="css/styles.css" />
     <script src="js/script.js" defer></script>
-
+ <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
     <style>
         /* Core Variables */
         :root {
