--- a/connect.html
+++ b/connect.html
@@ -15,7 +15,8 @@
     <meta name="author" content="Algolytic Data Solutions">
     <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Inter:wght@400;500;600;700&display=swap"
         rel="stylesheet">
-
+ <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Careers - Algolytic Data Solutions">
     <meta property="og:description"
